# YTD-CC

./: .env.example  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint-output.json  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
playwright-report/: index.html
scripts/: download-sidecars.ps1  download-sidecars.sh
src/: App.vue  main.js  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: download.rs  error.rs  ffmpeg.rs  lib.rs  main.rs  settings.rs  utils.rs  yaydl.rs
src-tauri/src/yaydl/: handlers.rs
src-tauri/src/yaydl/handlers/: youtube.rs
src/assets/: avatar.jfif  installer_banner.psd  installer_bg.psd  tailwind.css
src/common/: downloader.js
src/components/: DownloadCountChart.vue  History.vue  Home.vue  Main.vue  Mainpanel.vue  SideHistory.vue  Sidebar.vue  VDynamicModal.vue
src/components/common/: DropdownSelect.vue
src/components/home/: HomeBanner.vue  UrlInput.vue
src/components/modal/: AppUpdaterModal.vue  DownloadQueueModal.vue  PlaylistModal.vue  YtDlModal.vue
src/components/views/: About.vue  History.vue  Home.vue  Settings.vue
src/composables/: index.ts  useClipboard.ts  useDownloadQueue.ts  useExternalLink.ts  useYouTubeParser.ts
src/constants/: app.ts  index.ts  quality.ts
src/router/: index.js  index.ts
src/services/: errorHandler.ts  index.ts
src/store/: index.js
src/stores/: app.ts  download.ts  history.ts  index.ts  queue.ts  settings.ts
src/tests/: setup.ts
src/tests/components/: SideHistory.test.ts  Sidebar.test.ts
src/tests/components/common/: DropdownSelect.test.ts
src/tests/components/home/: UrlInput.test.ts
src/tests/components/views/: About.test.ts  Settings.test.ts
src/tests/composables/: useClipboard.test.ts  useYouTubeParser.test.ts
src/tests/services/: errorHandler.test.ts
src/tests/stores/: app.test.ts  download.test.ts  queue.test.ts  settings.test.ts
src/tests/utils/: performance.test.ts  youtube.test.ts
src/types/: index.ts  vue-virtual-scroller.d.ts
src/utils/: index.ts  performance.ts  youtube.ts
test-results/: .last-run.json
