[package]
name = "ytd_cc"
version = "0.1.0"
description = "Youtube downloader built with tauri"
authors = ["Tab Etuc"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["fs-all", "http-all", "macos-private-api", "notification-all", "path-all", "process-command-api", "shell-open", "shell-sidecar", "system-tray", "updater", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize"] }
anyhow = "1.0"
indicatif = "0.15"
scraper = "0.12"
ureq = { version = "2.1", features = ["json"] }
url = "2.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
