[package]
name = "ytd_cc"
version = "0.2.0"
description = "Youtube downloader built with tauri"
authors = ["Tab Etuc"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
ureq = { version = "3", features = ["json"] }
url = "2"
time = "0.3"
image = "0.25"
tokio = { version = "1.49.0", features = ["fs"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = []
